--- a/src/index.css
+++ b/src/index.css
@@ -22,11 +22,11 @@ a:hover {
   color: #535bf2;
 }
 
-p {
+p.item {
   transition: 0.2s ease;
 }
 
-p:hover {
+p.item:hover {
   color: #535bf2;
 }
 
@@ -70,7 +70,7 @@ button:focus-visible {
   a:hover {
     color: #747bff;
   }
-  p:hover {
+  p.item:hover {
     color: #747bff;
   }
   button {
